View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0024077 | Open CASCADE | OCCT:Data Exchange | public | 2013-07-17 18:34 | 2013-12-19 13:56 |
Reporter | Assigned To | ||||
Priority | urgent | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | Mac | OS | OS | ||
Target Version | 6.7.0 | Fixed in Version | 6.7.0 | ||
Summary | 0024077: Build errors on master branch on Mac OS X | ||||
Description | Building master branch on Mac OS X fails with following errors: Info : -------> IGESToBRep_TopoSurface.cxx Error : Errors occured in Shell /Users/mnt/tools/WOK660beta/wok_entities/LOC/dev/IR-2013-07-12-master-occt/inc/TopTools_ListOfShape.hxx: In copy constructor 'BRepBuilderAPI_MakeShape::BRepBuilderAPI_MakeShape(const BRepBuilderAPI_MakeShape&)': /Users/mnt/tools/WOK660beta/wok_entities/LOC/dev/IR-2013-07-12-master-occt/inc/TopTools_ListOfShape.hxx:104: error: 'TopTools_ListOfShape::TopTools_ListOfShape(const TopTools_ListOfShape&)' is private /Users/mnt/tools/WOK660beta/wok_entities/LOC/dev/IR-2013-07-12-master-occt/inc/BRepBuilderAPI_MakeShape.hxx:41: error: within this context /Users/mnt/tools/WOK660beta/wok_entities/LOC/dev/IR-2013-07-12-master-occt/inc/BRepBuilderAPI_MakeFace.hxx: In copy constructor 'BRepBuilderAPI_MakeFace::BRepBuilderAPI_MakeFace(const BRepBuilderAPI_MakeFace&)': /Users/mnt/tools/WOK660beta/wok_entities/LOC/dev/IR-2013-07-12-master-occt/inc/BRepBuilderAPI_MakeFace.hxx:73: note: synthesized method 'BRepBuilderAPI_MakeShape::BRepBuilderAPI_MakeShape(const BRepBuilderAPI_MakeShape&)' first required here /Users/mnt/tools/WOK660beta/wok_entities/LOC/dev/IR-2013-07-12-master-occt/inc/TopTools_ListOfShape.hxx: In copy constructor 'BRepLib_MakeShape::BRepLib_MakeShape(const BRepLib_MakeShape&)': /Users/mnt/tools/WOK660beta/wok_entities/LOC/dev/IR-2013-07-12-master-occt/inc/TopTools_ListOfShape.hxx:104: error: 'TopTools_ListOfShape::TopTools_ListOfShape(const TopTools_ListOfShape&)' is private Info : -------> StepToTopoDS_Builder.cxx Error : Errors occured in Shell /Users/mnt/tools/WOK660beta/wok_entities/LOC/dev/IR-2013-07-12-master-occt/inc/TopTools_ListOfShape.hxx: In copy constructor 'BRepBuilderAPI_MakeShape::BRepBuilderAPI_MakeShape(const BRepBuilderAPI_MakeShape&)': /Users/mnt/tools/WOK660beta/wok_entities/LOC/dev/IR-2013-07-12-master-occt/inc/TopTools_ListOfShape.hxx:104: error: 'TopTools_ListOfShape::TopTools_ListOfShape(const TopTools_ListOfShape&)' is private /Users/mnt/tools/WOK660beta/wok_entities/LOC/dev/IR-2013-07-12-master-occt/inc/BRepBuilderAPI_MakeShape.hxx:41: error: within this context /Users/mnt/tools/WOK660beta/wok_entities/LOC/dev/IR-2013-07-12-master-occt/inc/BRepBuilderAPI_MakeFace.hxx: In copy constructor 'BRepBuilderAPI_MakeFace::BRepBuilderAPI_MakeFace(const BRepBuilderAPI_MakeFace&)': /Users/mnt/tools/WOK660beta/wok_entities/LOC/dev/IR-2013-07-12-master-occt/inc/BRepBuilderAPI_MakeFace.hxx:73: note: synthesized method 'BRepBuilderAPI_MakeShape::BRepBuilderAPI_MakeShape(const BRepBuilderAPI_MakeShape&)' first required here /Users/mnt/tools/WOK660beta/wok_entities/LOC/dev/IR-2013-07-12-master-occt/inc/TopTools_ListOfShape.hxx: In copy constructor 'BRepLib_MakeShape::BRepLib_MakeShape(const BRepLib_MakeShape&)': /Users/mnt/tools/WOK660beta/wok_entities/LOC/dev/IR-2013-07-12-master-occt/inc/TopTools_ListOfShape.hxx:104: error: 'TopTools_ListOfShape::TopTools_ListOfShape(const TopTools_ListOfShape&)' is private These errors are caused by the patch 0024028 | ||||
Steps To Reproduce | In WOK: wprocess -DUnits=IGESToBRep wprocess -DUnits=StepToTopoDS | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
related to | 0024028 | closed | It is impossible to create a face based on Geom_RectangularTrimmedSurface by standard methods |
|
Proposed solution is to use temporary variable for BRepBuilderAPI_MakeFace in IGESToBRep_TopoSurface.cxx (lines 791 and 796) and in StepToTopoDS_Builder.cxx (lines 717 and 721) |
|
CR24077 is ready to review. |
|
CR24077 is ready to review again. |
|
Branch CR24077 is ready to be tested. |
|
Branch CR24077_1 is ready to review. |
|
Branch CR24077_1 is ready to be tested. Please test branch CR24077_1. |
|
Dear BugMaster, Branch CR24077 (and products from GIT master) was compiled on Linux and Windows platforms and tested. SHA-1: 4bb7cf5c2290910d3f66761dca2dc1c5261101a4 Regressions: http://occt-tests/CR24077-master-occt/Debian60-64/summary.html http://occt-tests/CR24077-master-occt/Windows-32-VC9/summary.html Improvements: http://occt-tests/CR24077-master-occt/Debian60-64/summary.html http://occt-tests/CR24077-master-occt/Windows-32-VC9/summary.html Testing cases: Not needed Testing on Linux: Total MEMORY difference: 358704116 / 358511828 Total CPU difference: 48295.610000000976 / 44181.43000000074 Testing on Windows: Total MEMORY difference: 420689776 / 421449512 Total CPU difference: 37097.5625 / 36097.875 There are not differences in images found by testdiff. |
|
Dear mkv! Above described regressions are fixed in CR24077_1 branch. Test it again, please. |
|
Dear BugMaster, Branch CR24077_1 (and products from GIT master) was compiled on Linux and Windows platforms and tested. SHA-1: 8e2318f8ec2c1ffd9f02a91cd596756a091342a8 Number of compiler warnings: occt component : Linux: 943 (945 on master) Windows: 954 (954 on master) products component : Linux: 189 (189 on master) Windows: 288 (288 on master) Regressions: No regressions Improvements: No improvements Testing cases: Not needed Testing on Linux: Total MEMORY difference: 364566468 / 365698632 Total CPU difference: 45554.080000001166 / 44445.12000000096 Testing on Windows: Total MEMORY difference: 425817088 / 425949776 Total CPU difference: 43946.546875 / 30358.84375 There are not differences in images found by testdiff. |
occt: master 440906ef 2013-07-19 05:36:49
|
0024077: Build errors on master branch on Mac OS X small correction Init() method is called with other parameter. |
Affected Issues 0024077 |
|
mod - src/IGESToBRep/IGESToBRep_TopoSurface.cxx | Diff File | ||
mod - src/StepToTopoDS/StepToTopoDS_Builder.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2013-07-17 18:34 |
|
New Issue | |
2013-07-17 18:34 |
|
Assigned To | => gka |
2013-07-17 18:34 |
|
Relationship added | related to 0024028 |
2013-07-17 18:36 |
|
Description Updated | |
2013-07-17 18:56 |
|
Note Added: 0025102 | |
2013-07-18 10:19 |
|
Assigned To | gka => ifv |
2013-07-18 15:20 | bugmaster | Priority | normal => urgent |
2013-07-18 16:12 |
|
Assigned To | ifv => nbv |
2013-07-18 16:12 |
|
Status | new => assigned |
2013-07-18 16:43 |
|
Note Added: 0025115 | |
2013-07-18 16:43 |
|
Assigned To | nbv => kgv |
2013-07-18 16:43 |
|
Status | assigned => resolved |
2013-07-18 16:46 |
|
Assigned To | kgv => nbv |
2013-07-18 16:46 |
|
Status | resolved => assigned |
2013-07-18 17:01 |
|
Note Added: 0025116 | |
2013-07-18 17:01 |
|
Assigned To | nbv => gka |
2013-07-18 17:01 |
|
Status | assigned => resolved |
2013-07-18 17:01 |
|
Note Added: 0025117 | |
2013-07-18 17:01 |
|
Status | resolved => reviewed |
2013-07-18 17:22 |
|
Assigned To | gka => mkv |
2013-07-19 12:44 |
|
Assigned To | mkv => gka |
2013-07-19 12:44 |
|
Status | reviewed => assigned |
2013-07-19 12:45 |
|
Status | assigned => resolved |
2013-07-19 12:45 |
|
Note Added: 0025119 | |
2013-07-19 12:53 |
|
Note Added: 0025120 | |
2013-07-19 12:53 |
|
Status | resolved => reviewed |
2013-07-19 14:24 |
|
Note Added: 0025123 | |
2013-07-19 14:24 |
|
Test case number | => Not needed |
2013-07-19 14:24 |
|
Assigned To | gka => apn |
2013-07-19 14:28 |
|
Note Added: 0025124 | |
2013-07-22 10:36 | apn | Note Added: 0025128 | |
2013-07-22 10:37 | apn | Assigned To | apn => bugmaster |
2013-07-22 10:37 | apn | Status | reviewed => tested |
2013-07-22 11:02 | bugmaster | Target Version | => 6.7.0 |
2013-07-22 12:33 |
|
Changeset attached | => occt master 440906ef |
2013-07-22 12:33 |
|
Assigned To | bugmaster => nbv |
2013-07-22 12:33 |
|
Status | tested => verified |
2013-07-22 12:33 |
|
Resolution | open => fixed |
2013-12-19 13:52 | bugmaster | Status | verified => closed |
2013-12-19 13:56 | bugmaster | Fixed in Version | => 6.7.0 |