0024077: Build errors on master branch on Mac OS X

small correction
Init() method is called with other parameter.